--- a/index.html
+++ b/index.html
@@ -2,24 +2,61 @@
 <html>
 <head>
   <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="IE=11, IE=10, IE=9, ie=8, ie=7">
+  <link rel="apple-touch-icon-precomposed" sizes="57x57" href="docs/favicons/apple-touch-icon-57x57.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="114x114" href="docs/favicons/apple-touch-icon-114x114.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="docs/favicons/apple-touch-icon-72x72.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="docs/favicons/apple-touch-icon-144x144.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="60x60" href="docs/favicons/apple-touch-icon-60x60.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="120x120" href="docs/favicons/apple-touch-icon-120x120.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="76x76" href="docs/favicons/apple-touch-icon-76x76.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="152x152" href="docs/favicons/apple-touch-icon-152x152.png" />
+  <link rel="icon" type="image/png" href="docs/favicons/favicon-196x196.png" sizes="196x196" />
+  <link rel="icon" type="image/png" href="docs/favicons/favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/png" href="docs/favicons/favicon-32x32.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="docs/favicons/favicon-16x16.png" sizes="16x16" />
+  <link rel="icon" type="image/png" href="docs/favicons/favicon-128.png" sizes="128x128" />
+  <meta name="application-name" content="Spellaphone"/>
+  <meta name="msapplication-TileColor" content="#FFFFFF" />
+  <meta name="msapplication-TileImage" content="docs/favicons/mstile-144x144.png" />
+  <meta name="msapplication-square70x70logo" content="docs/favicons/mstile-70x70.png" />
+  <meta name="msapplication-square150x150logo" content="docs/favicons/mstile-150x150.png" />
+  <meta name="msapplication-wide310x150logo" content="docs/favicons/mstile-310x150.png" />
+  <meta name="msapplication-square310x310logo" content="docs/favicons/mstile-310x310.png" />
+  <link rel="shortcut icon" type="image/x-icon" href="docs/favicons/favicon.ico">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.2.2/gh-fork-ribbon.min.css" />
   <title>SpellaPhone</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-markdown-css/2.10.0/github-markdown.min.css"
-        integrity="sha256-Ndk1ry+oGNFEaXt4kxlW/SYLbxat1O0DhaDd+lob0SY="
-        crossorigin="anonymous" />
+  <link rel="stylesheet" href="docs/index.css" />
 </head>
 <body>
-  <a href="https://github.com/allenluce/spellaphone">
-    <img style="position: absolute; top: 0; right: 0; border: 0;"
-         src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"
-         alt="Fork me on GitHub"></a>
+  <a href="https://github.com/allenluce/spellaphone" class="github-corner" aria-label="View source on Github">
+    <svg width="80" height="80" viewBox="0 0 250 250"
+         style="fill:#151513; color:#fff; position: absolute; top: 0; border: 0; right: 0;"
+         aria-hidden="true">
+      <path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path>
+      <path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path>
+      <path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path>
+    </svg>
+  </a>
   <div id="content" class="markdown-body"></div>
   <script type="application/javascript"
           src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
   <script type="application/javascript">
+    function handle(ex) {
+      document.getElementById('content').innerHTML = marked(ex.target.responseText)
+      // Fill in the blank demo div in README.md
+      document.getElementById('demo').innerHTML = ' \
+<h6>(Or type in a word to see it in numbers.)</h6> \
+<div class="intrinsic-container"> \
+    <iframe src="docs/demo.html" allowfullscreen></iframe> \
+</div> \
+'
+    }
     const request = new XMLHttpRequest()
-    request.open('GET', 'README.md', false)
-    request.send(null)
-    document.getElementById('content').innerHTML = marked(request.responseText)
+    request.onload = handle
+    request.open('GET', 'README.md')
+    request.send()
   </script>
 </body>
 </html>
